# sovereign-agent

./: package.json  pyproject.toml  skill.yaml
.github/workflows/: ci.yml  publish.yml
src/sksovereign_agent/: __init__.py  agent.py
src/sovereign_agent/: __init__.py  quick.py
src/sovereign_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_agent.py
