[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sovereign-agent"
version = "0.1.0"
description = "Sovereign Agent SDK — one package to build AI agents with CapAuth identity, SKMemory persistence, SKChat messaging, and SKComm transport"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.11"
authors = [
    {name = "smilinTux", email = "admin@smilintux.org"},
]
keywords = ["ai", "agent", "sovereign", "identity", "pgp", "p2p", "memory", "chat"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Security :: Cryptography",
    "Topic :: Communications :: Chat",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0",
    "PGPy>=0.6",
    "pyyaml>=6.0",
    "click>=8.1",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=24.0",
]

[project.urls]
Homepage = "https://smilintux.org"
Repository = "https://github.com/smilinTux/sovereign-agent"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 99
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
